--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "tsx server/index.ts",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "db:generate": "drizzle-kit generate:sqlite",
     "db:migrate": "tsx database/migrate.ts",
     "db:seed": "tsx database/seed.ts"
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.2.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
