--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/client": "^11.4.4",
     "@trpc/react-query": "^11.4.4",
     "@trpc/server": "^11.4.4",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
+    "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
