--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.0",
+    "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.85.3",
     "@trpc/client": "^11.4.4",
     "@trpc/react-query": "^11.4.4",
