--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/vercel.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     },
     {
@@ -16,7 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/vercel.ts"
+      "dest": "/api/index.ts"
     },
     {
       "src": "/assets/(.*)",
@@ -29,10 +29,5 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "server/vercel.ts": {
-      "maxDuration": 30
-    }
   }
 }
